# vectorlite

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md
.github/workflows/: rust.yml
bindings/: Cargo.toml  README.md  example.py  install.sh  pyproject.toml  test_bindings.py
bindings/src/: lib.rs
docs/: openapi.yaml
src/: client.rs  embeddings.rs  errors.rs  lib.rs  main.rs  persistence.rs  server.rs
src/index/: flat.rs  hash.rs  hnsw.rs  hnsw_memory_optimized.rs  mod.rs
tests/: http_integration_test.rs  integration_test.rs  metric_enforcement_test.rs  persistence_api_test.rs
