[package]
name = "vectorlite"
version = "0.1.0"
edition = "2024"

[features]
default = ["fast"]
fast = []
memory-optimized = []
high-accuracy = []

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "1.3"
hnsw = "0.11.0"
space = "0.17"
rand = "0.8"
thiserror = "1.0"
candle-core = { version = "0.9.1", features = ["accelerate"] }
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.19"
hf-hub = "0.3"
