[package]
name = "vectorlite"
version = "0.1.0"
edition = "2024"

[features]
default = ["fast"]
fast = []
memory-optimized = []
high-accuracy = []

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
hnsw = "0.11.0"
space = "0.17"
rand = "0.8"
thiserror = "1.0"
candle-core = { version = "0.9.1", features = ["accelerate"] }
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.19"
crossterm = "0.28"
num_cpus = "1.0"
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "github_issues_search"
path = "examples/github_issues_search.rs"

[[example]]
name = "github_issues_search_demo"
path = "examples/github_issues_search_demo.rs"

[[example]]
name = "github_issues_live_search"
path = "examples/github_issues_live_search.rs"

[[example]]
name = "github_issues_simple_live_search"
path = "examples/github_issues_simple_live_search.rs"

[[example]]
name = "performance_analysis"
path = "examples/performance_analysis.rs"

[[bench]]
name = "embedding_benchmarks"
harness = false