[package]
name = "vectorlite"
version = "0.1.0"
edition = "2024"
description = "A high-performance, in-memory vector database optimized for AI agent workloads"
license = "Apache-2.0"
repository = "https://github.com/your-username/vectorlite"
homepage = "https://github.com/your-username/vectorlite"
documentation = "https://docs.rs/vectorlite"
keywords = ["vector", "database", "embedding", "search", "ai", "ml"]
categories = ["database", "machine-learning", "web-programming::http-server"]
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[features]
default = ["fast"]
fast = []
memory-optimized = []
high-accuracy = []

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
hnsw = "0.11.0"
space = "0.17"
rand = "0.8"
thiserror = "1.0"
candle-core = { version = "0.9.1", features = ["accelerate"] }
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.19"
crossterm = "0.28"
num_cpus = "1.0"
rayon = "1.8"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
